// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contest > 2023_ccpc_final 3`] = `
Contest {
  "awards": Map {
    "official" => [
      Award {
        "maxRank": 4,
        "medalType": "Gold",
        "minRank": 1,
      },
      Award {
        "maxRank": 8,
        "medalType": "Silver",
        "minRank": 5,
      },
      Award {
        "maxRank": 12,
        "medalType": "Bronze",
        "minRank": 9,
      },
      Award {
        "maxRank": 1061109567,
        "medalType": "Honorable",
        "minRank": 13,
      },
    ],
  },
  "banner": undefined,
  "boardLink": undefined,
  "endTime": "2023-05-14T06:10:00.000Z",
  "freezeDurationTimestamp": 3600,
  "freezeTime": "2023-05-14T05:10:00.000Z",
  "group": Map {
    "all" => Group {
      "isDefault": true,
      "name": I18nText {
        "fallbackLang": "zh-CN",
        "texts": Map {
          "en" => "All",
          "zh-CN" => "所有队伍",
        },
      },
    },
    "official" => Group {
      "isDefault": false,
      "name": I18nText {
        "fallbackLang": "zh-CN",
        "texts": Map {
          "zh-CN" => "正式队伍",
          "en" => "Official",
        },
      },
    },
    "unofficial" => Group {
      "isDefault": false,
      "name": I18nText {
        "fallbackLang": "zh-CN",
        "texts": Map {
          "zh-CN" => "打星队伍",
          "en" => "Unofficial",
        },
      },
    },
    "girl" => Group {
      "isDefault": false,
      "name": I18nText {
        "fallbackLang": "zh-CN",
        "texts": Map {
          "zh-CN" => "女队",
          "en" => "Girls",
        },
      },
    },
  },
  "id": "",
  "logo": {
    "preset": "CCPC",
  },
  "medal": {
    "official": {
      "bronze": 4,
      "gold": 4,
      "silver": 4,
    },
  },
  "name": I18nText {
    "fallback": "第八届中国大学生程序设计竞赛总决赛（正式赛）",
    "texts": Map {},
  },
  "options": ContestOptions {
    "calculationOfPenalty": "in_minutes",
    "enableOrganization": true,
    "reactionVideoUrlTemplate": undefined,
    "submissionEnableActionField": false,
    "submissionHasExternalUrlField": false,
    "submissionHasLanguageField": false,
    "submissionHasReactionField": false,
    "submissionHasRealtimeReactionStreamField": false,
    "submissionHasTimeField": false,
    "submissionTimestampUnit": "second",
    "teamPhotoTemplate": undefined,
    "teamScreenStreamUrlTemplate": undefined,
    "teamWebcamStreamUrlTemplate": undefined,
  },
  "penalty": 1200,
  "problems": [
    Problem {
      "balloonColor": {
        "background_color": "rgba(189, 14, 14, 0.7)",
        "color": "#fff",
      },
      "id": "0",
      "label": "A",
      "statistics": ProblemStatistics {
        "acceptedNum": 29,
        "attemptedNum": 56,
        "firstSolveSubmissions": [
          Submission {
            "id": "68",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "0",
            "status": "ACCEPTED",
            "teamId": "3000202305140102",
            "timestamp": 720,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1636",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "0",
            "status": "ACCEPTED",
            "teamId": "3000202305140034",
            "timestamp": 17460,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 178,
        "se": 0.78,
        "submittedNum": 207,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "#951FD9",
        "color": "#fff",
      },
      "id": "1",
      "label": "B",
      "statistics": ProblemStatistics {
        "acceptedNum": 3,
        "attemptedNum": 9,
        "firstSolveSubmissions": [
          Submission {
            "id": "920",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "1",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 10920,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1509",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "1",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 17040,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 12,
        "se": 0.98,
        "submittedNum": 15,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(255, 255, 255, 0.7)",
        "color": "#000",
      },
      "id": "2",
      "label": "C",
      "statistics": ProblemStatistics {
        "acceptedNum": 99,
        "attemptedNum": 184,
        "firstSolveSubmissions": [
          Submission {
            "id": "165",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "2",
            "status": "ACCEPTED",
            "teamId": "3000202305140063",
            "timestamp": 1800,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1806",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "2",
            "status": "ACCEPTED",
            "teamId": "3000202305140025",
            "timestamp": 17880,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 161,
        "se": 0.25,
        "submittedNum": 263,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(38, 185, 60, 0.7)",
        "color": "#fff",
      },
      "id": "3",
      "label": "D",
      "statistics": ProblemStatistics {
        "acceptedNum": 1,
        "attemptedNum": 1,
        "firstSolveSubmissions": [
          Submission {
            "id": "787",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "3",
            "status": "ACCEPTED",
            "teamId": "3000202305140103",
            "timestamp": 8700,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "787",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "3",
            "status": "ACCEPTED",
            "teamId": "3000202305140103",
            "timestamp": 8700,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 2,
        "se": 0.99,
        "submittedNum": 3,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(239, 217, 9, 0.7)",
        "color": "#000",
      },
      "id": "4",
      "label": "E",
      "statistics": ProblemStatistics {
        "acceptedNum": 126,
        "attemptedNum": 148,
        "firstSolveSubmissions": [
          Submission {
            "id": "0",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "4",
            "status": "ACCEPTED",
            "teamId": "3000202305140002",
            "timestamp": 240,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "477",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "4",
            "status": "ACCEPTED",
            "teamId": "3000202305140119",
            "timestamp": 5160,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 78,
        "se": 0.05,
        "submittedNum": 207,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(243, 88, 20, 0.7)",
        "color": "#fff",
      },
      "id": "5",
      "label": "F",
      "statistics": ProblemStatistics {
        "acceptedNum": 125,
        "attemptedNum": 255,
        "firstSolveSubmissions": [
          Submission {
            "id": "121",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "5",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 1200,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1692",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "5",
            "status": "ACCEPTED",
            "teamId": "3000202305140098",
            "timestamp": 17640,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 147,
        "se": 0.05,
        "submittedNum": 275,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(12, 76, 138, 0.7)",
        "color": "#fff",
      },
      "id": "6",
      "label": "G",
      "statistics": ProblemStatistics {
        "acceptedNum": 0,
        "attemptedNum": 0,
        "firstSolveSubmissions": [],
        "ignoreNum": 0,
        "lastSolveSubmissions": [],
        "pendingNum": 0,
        "rejectedNum": 2,
        "se": 1,
        "submittedNum": 2,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(156, 155, 155, 0.7)",
        "color": "#000",
      },
      "id": "7",
      "label": "H",
      "statistics": ProblemStatistics {
        "acceptedNum": 6,
        "attemptedNum": 12,
        "firstSolveSubmissions": [
          Submission {
            "id": "685",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "7",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 7680,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1517",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "7",
            "status": "ACCEPTED",
            "teamId": "3000202305140050",
            "timestamp": 17100,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 40,
        "se": 0.95,
        "submittedNum": 46,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(4, 154, 115, 0.7)",
        "color": "#fff",
      },
      "id": "8",
      "label": "I",
      "statistics": ProblemStatistics {
        "acceptedNum": 2,
        "attemptedNum": 6,
        "firstSolveSubmissions": [
          Submission {
            "id": "903",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "8",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 10560,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1632",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "8",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 17460,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 10,
        "se": 0.98,
        "submittedNum": 12,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(159, 19, 236, 0.7)",
        "color": "#fff",
      },
      "id": "9",
      "label": "J",
      "statistics": ProblemStatistics {
        "acceptedNum": 108,
        "attemptedNum": 337,
        "firstSolveSubmissions": [
          Submission {
            "id": "146",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "9",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 1440,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1530",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "9",
            "status": "ACCEPTED",
            "teamId": "3000202305140124",
            "timestamp": 17160,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 329,
        "se": 0.18,
        "submittedNum": 441,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(42, 197, 202, 0.7)",
        "color": "#000",
      },
      "id": "10",
      "label": "K",
      "statistics": ProblemStatistics {
        "acceptedNum": 1,
        "attemptedNum": 4,
        "firstSolveSubmissions": [
          Submission {
            "id": "1164",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "10",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 14280,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1164",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "10",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 14280,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 7,
        "se": 0.99,
        "submittedNum": 8,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(142, 56, 54, 0.7)",
        "color": "#fff",
      },
      "id": "11",
      "label": "L",
      "statistics": ProblemStatistics {
        "acceptedNum": 48,
        "attemptedNum": 183,
        "firstSolveSubmissions": [
          Submission {
            "id": "201",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "11",
            "status": "ACCEPTED",
            "teamId": "3000202305140027",
            "timestamp": 2340,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1822",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "11",
            "status": "ACCEPTED",
            "teamId": "3000202305140054",
            "timestamp": 17880,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 328,
        "se": 0.64,
        "submittedNum": 389,
      },
    },
    Problem {
      "balloonColor": {
        "background_color": "rgba(0, 0, 0, 0.7)",
        "color": "#fff",
      },
      "id": "12",
      "label": "M",
      "statistics": ProblemStatistics {
        "acceptedNum": 7,
        "attemptedNum": 8,
        "firstSolveSubmissions": [
          Submission {
            "id": "347",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "12",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 3660,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1607",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "12",
            "status": "ACCEPTED",
            "teamId": "3000202305140087",
            "timestamp": 17400,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 25,
        "se": 0.95,
        "submittedNum": 32,
      },
    },
  ],
  "problemsMap": Map {
    "0" => Problem {
      "balloonColor": {
        "background_color": "rgba(189, 14, 14, 0.7)",
        "color": "#fff",
      },
      "id": "0",
      "label": "A",
      "statistics": ProblemStatistics {
        "acceptedNum": 29,
        "attemptedNum": 56,
        "firstSolveSubmissions": [
          Submission {
            "id": "68",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "0",
            "status": "ACCEPTED",
            "teamId": "3000202305140102",
            "timestamp": 720,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1636",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "0",
            "status": "ACCEPTED",
            "teamId": "3000202305140034",
            "timestamp": 17460,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 178,
        "se": 0.78,
        "submittedNum": 207,
      },
    },
    "1" => Problem {
      "balloonColor": {
        "background_color": "#951FD9",
        "color": "#fff",
      },
      "id": "1",
      "label": "B",
      "statistics": ProblemStatistics {
        "acceptedNum": 3,
        "attemptedNum": 9,
        "firstSolveSubmissions": [
          Submission {
            "id": "920",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "1",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 10920,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1509",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "1",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 17040,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 12,
        "se": 0.98,
        "submittedNum": 15,
      },
    },
    "2" => Problem {
      "balloonColor": {
        "background_color": "rgba(255, 255, 255, 0.7)",
        "color": "#000",
      },
      "id": "2",
      "label": "C",
      "statistics": ProblemStatistics {
        "acceptedNum": 99,
        "attemptedNum": 184,
        "firstSolveSubmissions": [
          Submission {
            "id": "165",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "2",
            "status": "ACCEPTED",
            "teamId": "3000202305140063",
            "timestamp": 1800,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1806",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "2",
            "status": "ACCEPTED",
            "teamId": "3000202305140025",
            "timestamp": 17880,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 161,
        "se": 0.25,
        "submittedNum": 263,
      },
    },
    "3" => Problem {
      "balloonColor": {
        "background_color": "rgba(38, 185, 60, 0.7)",
        "color": "#fff",
      },
      "id": "3",
      "label": "D",
      "statistics": ProblemStatistics {
        "acceptedNum": 1,
        "attemptedNum": 1,
        "firstSolveSubmissions": [
          Submission {
            "id": "787",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "3",
            "status": "ACCEPTED",
            "teamId": "3000202305140103",
            "timestamp": 8700,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "787",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "3",
            "status": "ACCEPTED",
            "teamId": "3000202305140103",
            "timestamp": 8700,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 2,
        "se": 0.99,
        "submittedNum": 3,
      },
    },
    "4" => Problem {
      "balloonColor": {
        "background_color": "rgba(239, 217, 9, 0.7)",
        "color": "#000",
      },
      "id": "4",
      "label": "E",
      "statistics": ProblemStatistics {
        "acceptedNum": 126,
        "attemptedNum": 148,
        "firstSolveSubmissions": [
          Submission {
            "id": "0",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "4",
            "status": "ACCEPTED",
            "teamId": "3000202305140002",
            "timestamp": 240,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "477",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "4",
            "status": "ACCEPTED",
            "teamId": "3000202305140119",
            "timestamp": 5160,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 78,
        "se": 0.05,
        "submittedNum": 207,
      },
    },
    "5" => Problem {
      "balloonColor": {
        "background_color": "rgba(243, 88, 20, 0.7)",
        "color": "#fff",
      },
      "id": "5",
      "label": "F",
      "statistics": ProblemStatistics {
        "acceptedNum": 125,
        "attemptedNum": 255,
        "firstSolveSubmissions": [
          Submission {
            "id": "121",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "5",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 1200,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1692",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "5",
            "status": "ACCEPTED",
            "teamId": "3000202305140098",
            "timestamp": 17640,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 147,
        "se": 0.05,
        "submittedNum": 275,
      },
    },
    "6" => Problem {
      "balloonColor": {
        "background_color": "rgba(12, 76, 138, 0.7)",
        "color": "#fff",
      },
      "id": "6",
      "label": "G",
      "statistics": ProblemStatistics {
        "acceptedNum": 0,
        "attemptedNum": 0,
        "firstSolveSubmissions": [],
        "ignoreNum": 0,
        "lastSolveSubmissions": [],
        "pendingNum": 0,
        "rejectedNum": 2,
        "se": 1,
        "submittedNum": 2,
      },
    },
    "7" => Problem {
      "balloonColor": {
        "background_color": "rgba(156, 155, 155, 0.7)",
        "color": "#000",
      },
      "id": "7",
      "label": "H",
      "statistics": ProblemStatistics {
        "acceptedNum": 6,
        "attemptedNum": 12,
        "firstSolveSubmissions": [
          Submission {
            "id": "685",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "7",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 7680,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1517",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "7",
            "status": "ACCEPTED",
            "teamId": "3000202305140050",
            "timestamp": 17100,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 40,
        "se": 0.95,
        "submittedNum": 46,
      },
    },
    "8" => Problem {
      "balloonColor": {
        "background_color": "rgba(4, 154, 115, 0.7)",
        "color": "#fff",
      },
      "id": "8",
      "label": "I",
      "statistics": ProblemStatistics {
        "acceptedNum": 2,
        "attemptedNum": 6,
        "firstSolveSubmissions": [
          Submission {
            "id": "903",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "8",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 10560,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1632",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "8",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 17460,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 10,
        "se": 0.98,
        "submittedNum": 12,
      },
    },
    "9" => Problem {
      "balloonColor": {
        "background_color": "rgba(159, 19, 236, 0.7)",
        "color": "#fff",
      },
      "id": "9",
      "label": "J",
      "statistics": ProblemStatistics {
        "acceptedNum": 108,
        "attemptedNum": 337,
        "firstSolveSubmissions": [
          Submission {
            "id": "146",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "9",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 1440,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1530",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "9",
            "status": "ACCEPTED",
            "teamId": "3000202305140124",
            "timestamp": 17160,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 329,
        "se": 0.18,
        "submittedNum": 441,
      },
    },
    "10" => Problem {
      "balloonColor": {
        "background_color": "rgba(42, 197, 202, 0.7)",
        "color": "#000",
      },
      "id": "10",
      "label": "K",
      "statistics": ProblemStatistics {
        "acceptedNum": 1,
        "attemptedNum": 4,
        "firstSolveSubmissions": [
          Submission {
            "id": "1164",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "10",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 14280,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1164",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "10",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 14280,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 7,
        "se": 0.99,
        "submittedNum": 8,
      },
    },
    "11" => Problem {
      "balloonColor": {
        "background_color": "rgba(142, 56, 54, 0.7)",
        "color": "#fff",
      },
      "id": "11",
      "label": "L",
      "statistics": ProblemStatistics {
        "acceptedNum": 48,
        "attemptedNum": 183,
        "firstSolveSubmissions": [
          Submission {
            "id": "201",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "11",
            "status": "ACCEPTED",
            "teamId": "3000202305140027",
            "timestamp": 2340,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1822",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "11",
            "status": "ACCEPTED",
            "teamId": "3000202305140054",
            "timestamp": 17880,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 328,
        "se": 0.64,
        "submittedNum": 389,
      },
    },
    "12" => Problem {
      "balloonColor": {
        "background_color": "rgba(0, 0, 0, 0.7)",
        "color": "#fff",
      },
      "id": "12",
      "label": "M",
      "statistics": ProblemStatistics {
        "acceptedNum": 7,
        "attemptedNum": 8,
        "firstSolveSubmissions": [
          Submission {
            "id": "347",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "12",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 3660,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1607",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "12",
            "status": "ACCEPTED",
            "teamId": "3000202305140087",
            "timestamp": 17400,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 25,
        "se": 0.95,
        "submittedNum": 32,
      },
    },
  },
  "startTime": "2023-05-14T01:10:00.000Z",
  "statusTimeDisplay": {
    "correct": true,
    "incorrect": true,
    "pending": true,
  },
  "tag": Map {},
  "totalDurationTimestamp": 18000,
  "unFreezeDurationTimestamp": 14400,
}
`;

exports[`contest > 2023_ccpc_final 4`] = `
RankOptions {
  "battleOfGiants": BattleOfGiants {
    "blueTeam": {
      "filterOrganizations": [],
      "filterTeams": [],
      "name": "Blue Team",
      "type": 0,
    },
    "enable": false,
    "equalTeams": true,
    "persist": false,
    "redTeam": {
      "filterOrganizations": [],
      "filterTeams": [],
      "name": "Red Team",
      "type": 1,
    },
    "topX": 5,
  },
  "enableAnimatedSubmissions": false,
  "enableFilterSubmissionsByTimestamp": false,
  "enableFilterTeamsByGroup": false,
  "filterOrganizationMap": Map {},
  "filterOrganizations": [],
  "filterTeamIdMap": Map {},
  "filterTeamIds": [],
  "filterTeamMap": Map {},
  "filterTeams": [],
  "group": "all",
  "timestamp": 0,
  "width": 0,
}
`;

exports[`contest > 2023_ccpc_final 16`] = `
[
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 960,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(189, 14, 14, 0.7)",
        "color": "#fff",
      },
      "id": "0",
      "label": "A",
      "statistics": ProblemStatistics {
        "acceptedNum": 29,
        "attemptedNum": 56,
        "firstSolveSubmissions": [
          Submission {
            "id": "68",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "0",
            "status": "ACCEPTED",
            "teamId": "3000202305140102",
            "timestamp": 720,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1636",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "0",
            "status": "ACCEPTED",
            "teamId": "3000202305140034",
            "timestamp": 17460,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 178,
        "se": 0.78,
        "submittedNum": 207,
      },
    },
    "solvedTimestamp": 960,
    "submissions": [
      Submission {
        "id": "98",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "0",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 960,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 1,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 2,
    "ignoreCount": 0,
    "isFirstSolved": true,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 10920,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "#951FD9",
        "color": "#fff",
      },
      "id": "1",
      "label": "B",
      "statistics": ProblemStatistics {
        "acceptedNum": 3,
        "attemptedNum": 9,
        "firstSolveSubmissions": [
          Submission {
            "id": "920",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "1",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 10920,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1509",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "1",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 17040,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 12,
        "se": 0.98,
        "submittedNum": 15,
      },
    },
    "solvedTimestamp": 10920,
    "submissions": [
      Submission {
        "id": "877",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "1",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 10020,
        "timestampUnit": "second",
      },
      Submission {
        "id": "890",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "1",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 10320,
        "timestampUnit": "second",
      },
      Submission {
        "id": "920",
        "isFirstSolved": true,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "1",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 10920,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 3,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 4800,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(255, 255, 255, 0.7)",
        "color": "#000",
      },
      "id": "2",
      "label": "C",
      "statistics": ProblemStatistics {
        "acceptedNum": 99,
        "attemptedNum": 184,
        "firstSolveSubmissions": [
          Submission {
            "id": "165",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "2",
            "status": "ACCEPTED",
            "teamId": "3000202305140063",
            "timestamp": 1800,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1806",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "2",
            "status": "ACCEPTED",
            "teamId": "3000202305140025",
            "timestamp": 17880,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 161,
        "se": 0.25,
        "submittedNum": 263,
      },
    },
    "solvedTimestamp": 4800,
    "submissions": [
      Submission {
        "id": "438",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "2",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 4800,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 1,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(38, 185, 60, 0.7)",
        "color": "#fff",
      },
      "id": "3",
      "label": "D",
      "statistics": ProblemStatistics {
        "acceptedNum": 1,
        "attemptedNum": 1,
        "firstSolveSubmissions": [
          Submission {
            "id": "787",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "3",
            "status": "ACCEPTED",
            "teamId": "3000202305140103",
            "timestamp": 8700,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "787",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "3",
            "status": "ACCEPTED",
            "teamId": "3000202305140103",
            "timestamp": 8700,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 2,
        "se": 0.99,
        "submittedNum": 3,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 300,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(239, 217, 9, 0.7)",
        "color": "#000",
      },
      "id": "4",
      "label": "E",
      "statistics": ProblemStatistics {
        "acceptedNum": 126,
        "attemptedNum": 148,
        "firstSolveSubmissions": [
          Submission {
            "id": "0",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "4",
            "status": "ACCEPTED",
            "teamId": "3000202305140002",
            "timestamp": 240,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "477",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "4",
            "status": "ACCEPTED",
            "teamId": "3000202305140119",
            "timestamp": 5160,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 78,
        "se": 0.05,
        "submittedNum": 207,
      },
    },
    "solvedTimestamp": 300,
    "submissions": [
      Submission {
        "id": "4",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "4",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 300,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 1,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": true,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 1200,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(243, 88, 20, 0.7)",
        "color": "#fff",
      },
      "id": "5",
      "label": "F",
      "statistics": ProblemStatistics {
        "acceptedNum": 125,
        "attemptedNum": 255,
        "firstSolveSubmissions": [
          Submission {
            "id": "121",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "5",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 1200,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1692",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "5",
            "status": "ACCEPTED",
            "teamId": "3000202305140098",
            "timestamp": 17640,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 147,
        "se": 0.05,
        "submittedNum": 275,
      },
    },
    "solvedTimestamp": 1200,
    "submissions": [
      Submission {
        "id": "121",
        "isFirstSolved": true,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "5",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 1200,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 1,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(12, 76, 138, 0.7)",
        "color": "#fff",
      },
      "id": "6",
      "label": "G",
      "statistics": ProblemStatistics {
        "acceptedNum": 0,
        "attemptedNum": 0,
        "firstSolveSubmissions": [],
        "ignoreNum": 0,
        "lastSolveSubmissions": [],
        "pendingNum": 0,
        "rejectedNum": 2,
        "se": 1,
        "submittedNum": 2,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 1,
    "ignoreCount": 0,
    "isFirstSolved": true,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 7680,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(156, 155, 155, 0.7)",
        "color": "#000",
      },
      "id": "7",
      "label": "H",
      "statistics": ProblemStatistics {
        "acceptedNum": 6,
        "attemptedNum": 12,
        "firstSolveSubmissions": [
          Submission {
            "id": "685",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "7",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 7680,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1517",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "7",
            "status": "ACCEPTED",
            "teamId": "3000202305140050",
            "timestamp": 17100,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 40,
        "se": 0.95,
        "submittedNum": 46,
      },
    },
    "solvedTimestamp": 7680,
    "submissions": [
      Submission {
        "id": "669",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "7",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 7560,
        "timestampUnit": "second",
      },
      Submission {
        "id": "685",
        "isFirstSolved": true,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "7",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 7680,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 2,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 1,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 17460,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(4, 154, 115, 0.7)",
        "color": "#fff",
      },
      "id": "8",
      "label": "I",
      "statistics": ProblemStatistics {
        "acceptedNum": 2,
        "attemptedNum": 6,
        "firstSolveSubmissions": [
          Submission {
            "id": "903",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "8",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 10560,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1632",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "8",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 17460,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 10,
        "se": 0.98,
        "submittedNum": 12,
      },
    },
    "solvedTimestamp": 17460,
    "submissions": [
      Submission {
        "id": "1608",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "8",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 17400,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1632",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "8",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 17460,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 2,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 1,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 2760,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(159, 19, 236, 0.7)",
        "color": "#fff",
      },
      "id": "9",
      "label": "J",
      "statistics": ProblemStatistics {
        "acceptedNum": 108,
        "attemptedNum": 337,
        "firstSolveSubmissions": [
          Submission {
            "id": "146",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "9",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 1440,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1530",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "9",
            "status": "ACCEPTED",
            "teamId": "3000202305140124",
            "timestamp": 17160,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 329,
        "se": 0.18,
        "submittedNum": 441,
      },
    },
    "solvedTimestamp": 2760,
    "submissions": [
      Submission {
        "id": "213",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "9",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 2520,
        "timestampUnit": "second",
      },
      Submission {
        "id": "237",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "9",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 2760,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 2,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 3,
    "ignoreCount": 0,
    "isFirstSolved": true,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 14280,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(42, 197, 202, 0.7)",
        "color": "#000",
      },
      "id": "10",
      "label": "K",
      "statistics": ProblemStatistics {
        "acceptedNum": 1,
        "attemptedNum": 4,
        "firstSolveSubmissions": [
          Submission {
            "id": "1164",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "10",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 14280,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1164",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "10",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 14280,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 7,
        "se": 0.99,
        "submittedNum": 8,
      },
    },
    "solvedTimestamp": 14280,
    "submissions": [
      Submission {
        "id": "1135",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "10",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 13860,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1137",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "10",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 13920,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1145",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "10",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 14040,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1164",
        "isFirstSolved": true,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "10",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 14280,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 4,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 4,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 5760,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(142, 56, 54, 0.7)",
        "color": "#fff",
      },
      "id": "11",
      "label": "L",
      "statistics": ProblemStatistics {
        "acceptedNum": 48,
        "attemptedNum": 183,
        "firstSolveSubmissions": [
          Submission {
            "id": "201",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "11",
            "status": "ACCEPTED",
            "teamId": "3000202305140027",
            "timestamp": 2340,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1822",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "11",
            "status": "ACCEPTED",
            "teamId": "3000202305140054",
            "timestamp": 17880,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 328,
        "se": 0.64,
        "submittedNum": 389,
      },
    },
    "solvedTimestamp": 5760,
    "submissions": [
      Submission {
        "id": "365",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "11",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 3840,
        "timestampUnit": "second",
      },
      Submission {
        "id": "386",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "11",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 4140,
        "timestampUnit": "second",
      },
      Submission {
        "id": "405",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "11",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 4380,
        "timestampUnit": "second",
      },
      Submission {
        "id": "452",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "11",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 4860,
        "timestampUnit": "second",
      },
      Submission {
        "id": "530",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "11",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 5760,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 5,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 9300,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(0, 0, 0, 0.7)",
        "color": "#fff",
      },
      "id": "12",
      "label": "M",
      "statistics": ProblemStatistics {
        "acceptedNum": 7,
        "attemptedNum": 8,
        "firstSolveSubmissions": [
          Submission {
            "id": "347",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "12",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 3660,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1607",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "12",
            "status": "ACCEPTED",
            "teamId": "3000202305140087",
            "timestamp": 17400,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 25,
        "se": 0.95,
        "submittedNum": 32,
      },
    },
    "solvedTimestamp": 9300,
    "submissions": [
      Submission {
        "id": "825",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": true,
        "problemId": "12",
        "status": "ACCEPTED",
        "teamId": "3000202305140047",
        "timestamp": 9300,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 1,
  },
]
`;

exports[`contest > 2023_ccpc_final 17`] = `
[
  [
    0,
    1,
  ],
  [
    4,
    2,
  ],
  [
    5,
    3,
  ],
  [
    6,
    2,
  ],
  [
    17,
    1,
  ],
  [
    20,
    1,
  ],
  [
    47,
    1,
  ],
  [
    62,
    3,
  ],
  [
    80,
    2,
  ],
  [
    97,
    2,
  ],
  [
    129,
    2,
  ],
  [
    155,
    1,
  ],
  [
    183,
    1,
  ],
  [
    205,
    2,
  ],
  [
    239,
    1,
  ],
  [
    292,
    1,
  ],
  [
    299,
    1,
  ],
]
`;

exports[`contest > 2023_ccpc_final 28`] = `
[
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(189, 14, 14, 0.7)",
        "color": "#fff",
      },
      "id": "0",
      "label": "A",
      "statistics": ProblemStatistics {
        "acceptedNum": 29,
        "attemptedNum": 56,
        "firstSolveSubmissions": [
          Submission {
            "id": "68",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "0",
            "status": "ACCEPTED",
            "teamId": "3000202305140102",
            "timestamp": 720,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1636",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "0",
            "status": "ACCEPTED",
            "teamId": "3000202305140034",
            "timestamp": 17460,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 178,
        "se": 0.78,
        "submittedNum": 207,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "#951FD9",
        "color": "#fff",
      },
      "id": "1",
      "label": "B",
      "statistics": ProblemStatistics {
        "acceptedNum": 3,
        "attemptedNum": 9,
        "firstSolveSubmissions": [
          Submission {
            "id": "920",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "1",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 10920,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1509",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "1",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 17040,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 12,
        "se": 0.98,
        "submittedNum": 15,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(255, 255, 255, 0.7)",
        "color": "#000",
      },
      "id": "2",
      "label": "C",
      "statistics": ProblemStatistics {
        "acceptedNum": 99,
        "attemptedNum": 184,
        "firstSolveSubmissions": [
          Submission {
            "id": "165",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "2",
            "status": "ACCEPTED",
            "teamId": "3000202305140063",
            "timestamp": 1800,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1806",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "2",
            "status": "ACCEPTED",
            "teamId": "3000202305140025",
            "timestamp": 17880,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 161,
        "se": 0.25,
        "submittedNum": 263,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(38, 185, 60, 0.7)",
        "color": "#fff",
      },
      "id": "3",
      "label": "D",
      "statistics": ProblemStatistics {
        "acceptedNum": 1,
        "attemptedNum": 1,
        "firstSolveSubmissions": [
          Submission {
            "id": "787",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "3",
            "status": "ACCEPTED",
            "teamId": "3000202305140103",
            "timestamp": 8700,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "787",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "3",
            "status": "ACCEPTED",
            "teamId": "3000202305140103",
            "timestamp": 8700,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 2,
        "se": 0.99,
        "submittedNum": 3,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 19,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": true,
    "lastSubmitTimestamp": 17520,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(239, 217, 9, 0.7)",
        "color": "#000",
      },
      "id": "4",
      "label": "E",
      "statistics": ProblemStatistics {
        "acceptedNum": 126,
        "attemptedNum": 148,
        "firstSolveSubmissions": [
          Submission {
            "id": "0",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "4",
            "status": "ACCEPTED",
            "teamId": "3000202305140002",
            "timestamp": 240,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "477",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "4",
            "status": "ACCEPTED",
            "teamId": "3000202305140119",
            "timestamp": 5160,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 78,
        "se": 0.05,
        "submittedNum": 207,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [
      Submission {
        "id": "554",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6000,
        "timestampUnit": "second",
      },
      Submission {
        "id": "560",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6180,
        "timestampUnit": "second",
      },
      Submission {
        "id": "573",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6300,
        "timestampUnit": "second",
      },
      Submission {
        "id": "577",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6360,
        "timestampUnit": "second",
      },
      Submission {
        "id": "697",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7740,
        "timestampUnit": "second",
      },
      Submission {
        "id": "700",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7740,
        "timestampUnit": "second",
      },
      Submission {
        "id": "709",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7920,
        "timestampUnit": "second",
      },
      Submission {
        "id": "711",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7920,
        "timestampUnit": "second",
      },
      Submission {
        "id": "780",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 8700,
        "timestampUnit": "second",
      },
      Submission {
        "id": "884",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 10260,
        "timestampUnit": "second",
      },
      Submission {
        "id": "886",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 10260,
        "timestampUnit": "second",
      },
      Submission {
        "id": "952",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 11340,
        "timestampUnit": "second",
      },
      Submission {
        "id": "953",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 11340,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1017",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 12180,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1031",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 12420,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1235",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 15120,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1328",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 16020,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1404",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 16500,
        "timestampUnit": "second",
      },
      Submission {
        "id": "1649",
        "isFirstSolved": false,
        "isIgnore": false,
        "isSolved": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 17520,
        "timestampUnit": "second",
      },
    ],
    "totalCount": 19,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(243, 88, 20, 0.7)",
        "color": "#fff",
      },
      "id": "5",
      "label": "F",
      "statistics": ProblemStatistics {
        "acceptedNum": 125,
        "attemptedNum": 255,
        "firstSolveSubmissions": [
          Submission {
            "id": "121",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "5",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 1200,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1692",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "5",
            "status": "ACCEPTED",
            "teamId": "3000202305140098",
            "timestamp": 17640,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 147,
        "se": 0.05,
        "submittedNum": 275,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(12, 76, 138, 0.7)",
        "color": "#fff",
      },
      "id": "6",
      "label": "G",
      "statistics": ProblemStatistics {
        "acceptedNum": 0,
        "attemptedNum": 0,
        "firstSolveSubmissions": [],
        "ignoreNum": 0,
        "lastSolveSubmissions": [],
        "pendingNum": 0,
        "rejectedNum": 2,
        "se": 1,
        "submittedNum": 2,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(156, 155, 155, 0.7)",
        "color": "#000",
      },
      "id": "7",
      "label": "H",
      "statistics": ProblemStatistics {
        "acceptedNum": 6,
        "attemptedNum": 12,
        "firstSolveSubmissions": [
          Submission {
            "id": "685",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "7",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 7680,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1517",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "7",
            "status": "ACCEPTED",
            "teamId": "3000202305140050",
            "timestamp": 17100,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 40,
        "se": 0.95,
        "submittedNum": 46,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(4, 154, 115, 0.7)",
        "color": "#fff",
      },
      "id": "8",
      "label": "I",
      "statistics": ProblemStatistics {
        "acceptedNum": 2,
        "attemptedNum": 6,
        "firstSolveSubmissions": [
          Submission {
            "id": "903",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "8",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 10560,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1632",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "8",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 17460,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 10,
        "se": 0.98,
        "submittedNum": 12,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(159, 19, 236, 0.7)",
        "color": "#fff",
      },
      "id": "9",
      "label": "J",
      "statistics": ProblemStatistics {
        "acceptedNum": 108,
        "attemptedNum": 337,
        "firstSolveSubmissions": [
          Submission {
            "id": "146",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "9",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 1440,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1530",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "9",
            "status": "ACCEPTED",
            "teamId": "3000202305140124",
            "timestamp": 17160,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 329,
        "se": 0.18,
        "submittedNum": 441,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(42, 197, 202, 0.7)",
        "color": "#000",
      },
      "id": "10",
      "label": "K",
      "statistics": ProblemStatistics {
        "acceptedNum": 1,
        "attemptedNum": 4,
        "firstSolveSubmissions": [
          Submission {
            "id": "1164",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "10",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 14280,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1164",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "10",
            "status": "ACCEPTED",
            "teamId": "3000202305140047",
            "timestamp": 14280,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 7,
        "se": 0.99,
        "submittedNum": 8,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(142, 56, 54, 0.7)",
        "color": "#fff",
      },
      "id": "11",
      "label": "L",
      "statistics": ProblemStatistics {
        "acceptedNum": 48,
        "attemptedNum": 183,
        "firstSolveSubmissions": [
          Submission {
            "id": "201",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "11",
            "status": "ACCEPTED",
            "teamId": "3000202305140027",
            "timestamp": 2340,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1822",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "11",
            "status": "ACCEPTED",
            "teamId": "3000202305140054",
            "timestamp": 17880,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 328,
        "se": 0.64,
        "submittedNum": 389,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
  TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 0,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(0, 0, 0, 0.7)",
        "color": "#fff",
      },
      "id": "12",
      "label": "M",
      "statistics": ProblemStatistics {
        "acceptedNum": 7,
        "attemptedNum": 8,
        "firstSolveSubmissions": [
          Submission {
            "id": "347",
            "isFirstSolved": true,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "12",
            "status": "ACCEPTED",
            "teamId": "3000202305140046",
            "timestamp": 3660,
            "timestampUnit": "second",
          },
        ],
        "ignoreNum": 0,
        "lastSolveSubmissions": [
          Submission {
            "id": "1607",
            "isFirstSolved": false,
            "isIgnore": false,
            "isSolved": true,
            "problemId": "12",
            "status": "ACCEPTED",
            "teamId": "3000202305140087",
            "timestamp": 17400,
            "timestampUnit": "second",
          },
        ],
        "pendingNum": 0,
        "rejectedNum": 25,
        "se": 0.95,
        "submittedNum": 32,
      },
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 0,
  },
]
`;

exports[`contest > 2023_ccpc_final 29`] = `
[
  [
    0,
    1,
  ],
  [
    4,
    2,
  ],
  [
    5,
    3,
  ],
  [
    6,
    7,
  ],
  [
    7,
    10,
  ],
  [
    8,
    14,
  ],
  [
    9,
    19,
  ],
  [
    10,
    25,
  ],
  [
    11,
    37,
  ],
  [
    12,
    48,
  ],
  [
    13,
    60,
  ],
  [
    14,
    69,
  ],
  [
    15,
    76,
  ],
  [
    16,
    85,
  ],
  [
    17,
    90,
  ],
  [
    18,
    95,
  ],
  [
    19,
    96,
  ],
  [
    20,
    100,
  ],
  [
    21,
    105,
  ],
  [
    22,
    108,
  ],
  [
    23,
    112,
  ],
  [
    24,
    113,
  ],
  [
    25,
    116,
  ],
  [
    26,
    118,
  ],
  [
    30,
    119,
  ],
  [
    31,
    120,
  ],
  [
    32,
    121,
  ],
  [
    38,
    122,
  ],
  [
    45,
    123,
  ],
  [
    58,
    124,
  ],
  [
    66,
    125,
  ],
  [
    68,
    126,
  ],
  [
    87,
    127,
  ],
  [
    135,
    128,
  ],
  [
    295,
    129,
  ],
  [
    299,
    129,
  ],
]
`;
